# gradient

./: Cargo.toml  copy_audio.sh  pack_mp4.sh
benches/: bench0.rs
src/: bitmap.rs  integrator.rs  lib.rs  main.rs
