[package]
name = "gradient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "5.0.3"
sdl2 = "0.35.2"
byte-slice-cast = "1.2.1"
image = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
itertools = "0.10.3"
num = "0.4.0"